fixes paragraph alignment

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ a{
 
 .about-box .summary > p{
 	font-size: 1.6em;
-	text-align: justify;
+	text-align: left;
 }
 
 .button-bar{
